<resources>
    <string name="app_name">Library</string>
    <string name="title_home">Home</string>
    <string name="title_browse_scroll">Browse</string>
    <string name="title_browse_detail">Details</string>
    <string name="title_orders">Orders</string>
    <string name="title_settings">Settings</string>
    <string name="subject_text">"Subject: %1$s"</string>
    <string name="year_text">"Year Published: %1$s"</string>
    <plurals name="copies_text_plural">
        <item quantity="one" >"%1$s copy available at %2$s"</item>
        <item quantity="other" >"%1$s copies available at %2$s"</item>
    </plurals>
    <string name="distance_text">"(%1$.1fkm away)"</string>
    <string name="null_distance_text">"( - km away)"</string>
    <string name="written_by_text">"Written by: %1$s"</string>
    <string name="title_search">Search</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_filter">Filter</string>
    <string name="no_results_found">No results found</string>
    <plurals name="result_count_text_plural">
    <item quantity="one" >"%1$s result found\nFilters applied: %2$s\n%3$s"</item>
    <item quantity="other" >"%1$s results found\nFilters applied: %2$s\n%3$s"</item>
    </plurals>
    <string name="subject">[Subject: %1$s]</string>
    <string name="distance">[Distance: %1$s]</string>
    <string name="blank_distance">%1$s%2$s</string>
    <string name="kilometres">km</string>
    <string name="miles">mi</string>
    <string name="any_distance">Any distance</string>
    <string name="within_1km">Within 1km</string>
    <string name="within_3km">Within 3km</string>
    <string name="within_10km">Within 10km</string>
    <string name="within_25km">Within 25km</string>
    <string name="filter_by_distance">Filter by distance</string>
    <string name="filter_by_subject">Filter by subject</string>
    <string name="all_subjects">All subjects</string>
    <string name="romance">Romance</string>
    <string name="thriller">Thriller</string>
    <string name="horror">Horror</string>
    <string name="mystery">Mystery</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="literature">Literature</string>
    <string name="business">Business</string>
    <string name="mathematics">Mathematics</string>
    <string name="science">Science</string>
    <string name="arts">Arts</string>
</resources>