<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_browse_scroll">

    <fragment
        android:id="@+id/navigation_browse_scroll"
        android:name="com.example.librarybrowse.ui.browse.BrowseScrollFragment"
        android:label="@string/title_browse_scroll"
        tools:layout="@layout/fragment_browse_scroll" >
        <action
            android:id="@+id/action_navigation_browse_scroll_to_navigation_browse_detail"
            app:destination="@id/navigation_browse_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.librarybrowse.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_browse_detail"
        android:name="com.example.librarybrowse.ui.browse.BrowseDetailFragment"
        android:label="@string/title_browse_detail" />
</navigation>